--- a/public/lk-css/menu-list.css
+++ b/public/lk-css/menu-list.css
@@ -1,19 +1,20 @@
 .container-fluid{padding: 0;}
-.big_block{display: none; width: 100%; margin: auto; margin-top: 5%;text-align: center;position: relative;}
+.click-show{display: block !important;}
+.big_block{display: none; width: 100%;text-align: center;position: fixed;z-index: 500;background: #000;padding-top: 50px;}
+.big_block>div{width: 15%;}
 .block1{display: inline-block;height: 80%;position: relative;}
-/* .block1:hover{} */
 .block2{display: inline-block;height: 80%;position: relative;margin-left: -2%;}
 .block3{display: inline-block;height: 80%;position: relative;margin-left: -2%;}
 .block4{display: inline-block;height: 80%;position: relative;margin-left: -4%;}
 .block5{display: inline-block;height: 80%;position: relative;margin-left: -2%;}
-.block6{display: inline-block;height: 80%;position: relative;}
-.menu-list-img{display: inline-block; height: 100%; filter: brightness(60%);}
+.block6{display: inline-block;height: 80%;position: relative;margin-left: -1.7%;}
+.menu-list-img{display: inline-block; height: 100%;filter: brightness(60%);position: absolute;left: 0;top: 0;z-index: 9;}
 /* .menu-list-img2{display: inline-block; height: 100%; filter: brightness(60%);}
 .menu-list-img3{display: inline-block; height: 100%; filter: brightness(60%);}
 .menu-list-img4{display: inline-block; height: 100%; filter: brightness(60%);}
 .menu-list-img5{display: inline-block; height: 100%; filter: brightness(60%);}
 .menu-list-img6{display: inline-block; height: 100%; filter: brightness(60%);} */
-.menu-list-limg{filter: brightness(60%);}
+.menu-list-limg{display: none; height: 100%;filter: brightness(60%);position: absolute;left: 0;top: 0;z-index: 10;}
 .menu_list_p{padding-top: 40%;top: 0;left: 0;}
 .menu-list-block{width: 100%;top: 30%;z-index: 10;}
 .menu-title{font-size: 1.25rem;color: #ccc;margin-bottom: 0.5rem;}
