--- a/public/lk-css/forgot-password.css
+++ b/public/lk-css/forgot-password.css
@@ -32,11 +32,12 @@ input[type=text]:focus, input[type=password]:focus, textarea:focus {
     color: #bababa;
     transform: translate(-1rem,-2rem);
 }
-.inp_bor{
+.click_vis{display: none;}
+.click_vis,.inp_bor{
     width: 25rem;height: 3rem;
     border-bottom: 1px solid #fff;
 }
-.inp_bor::before{
+.click_vis::before,.inp_bor::before{
     content: "";
     display: block;
     height: 50%;
@@ -78,12 +79,3 @@ input[type=text]:focus, input[type=password]:focus, textarea:focus {
     color: #fff;
 }
 .btn_vcode:focus{outline: 0;}
-.span_text{
-    font: 1rem microsoft yahei;
-    color: #fff;
-}
-.form_text{
-    font: 1rem microsoft yahei;
-    color: #fff;
-    text-decoration: underline;
-}
