--- a/public/lk-css/common.css
+++ b/public/lk-css/common.css
@@ -1,4 +1,5 @@
 body{background: #000;font-family: microsoft yahei;}
+.container-fluid{overflow: hidden;}
 .iframe_index-header{width: 100%;height: 4.375rem; border: 0;position: fixed;top: 0rem;z-index: 98;}
 .iframe_index-footer{width: 100%;height: 32rem; border: 0;}
 /* @media (min-width:576px) {
